fix: enhance blog management scripts and update tags
- Updated tags in Tags.md for consistency and accuracy.
- Added a new script (fix-blogs.ts) to automate common blog validation tasks:
  - Removes duplicate entries from Blogs.json.
  - Trims whitespace from titles and descriptions.
  - Syncs Blogs.json with README.md content.
- Added a new npm script "fix" to run the blog fix script.
- Updated the description in the README of the SLI, SLA, SLO post for clarity.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "generate-social-image": "npx ts-node src/scripts/generate-social-image.ts",
     "regenerate-all-social-images": "find posts -name 'social-media.png' -delete && npx ts-node src/scripts/generate-social-image.ts --all",
     "validate": "npx ts-node src/scripts/validate-blogs.ts",
+    "fix": "npx ts-node src/scripts/fix-blogs.ts",
     "build": "tsc",
     "generate-social-image:js": "node dist/scripts/generate-social-image.js",
     "validate:js": "node dist/scripts/validate-blogs.js"
